# docsentinel

./: .gitignore  Cargo.toml  README.md  agent.md  generated_docs.md
.github/workflows/: rust.yml
doc/: docsentinel.1
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/drift/: detector.rs  embedding.rs  mod.rs  rules.rs
src/extract/: code.rs  doc.rs  mod.rs
src/llm/: client.rs  mod.rs  prompts.rs
src/repo/: change.rs  config.rs  mod.rs
src/storage/: mod.rs  schema.rs
src/tui/: app.rs  mod.rs  ui.rs  widgets.rs
