[package]
name = "docsentinel"
version = "0.1.0"
edition = "2021"
authors = ["DocSentinel Contributors"]
description = "Local-first documentation drift detection and fixing tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/docsentinel/docsentinel"
keywords = ["documentation", "drift", "detection", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Git interaction
git2 = "0.19"

# Tree-sitter for code parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# SQLite storage
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "7.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Diff generation
similar = "2.6"

# Async trait support
async-trait = "0.1"

# Directory utilities
dirs = "5.0"
walkdir = "2.5"

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Markdown parsing
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "docsentinel"
path = "src/main.rs"
